# ons-client-cpp

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  Makefile  README.md  WORKSPACE
.github/workflows/: bazel-release.yml  main.yml  release.yml
api/: BUILD.bazel
api/ons/: Action.h  ConsumeContext.h  ConsumeOrderContext.h  LocalTransactionChecker.h  LocalTransactionExecutor.h  Message.h  MessageListener.h  MessageModel.h  MessageOrderListener.h  MessageQueueONS.h  MessageQueueSelectorONS.h  ONSCallback.h  ONSChannel.h  ONSClient.h  ONSClientException.h  ONSEnvironmentVariableFactoryProperty.h  ONSErrorCode.h  ONSFactory.h  ONSFactoryAPI.h  ONSFactoryProperty.h  ONSPullStatus.h  OrderAction.h  OrderConsumer.h  OrderProducer.h  Producer.h  PullConsumer.h  PullResultONS.h  PushConsumer.h  SendResultONS.h  Trace.h  TransactionProducer.h  TransactionStatus.h
bazel/: cc_combine.bzl  deps.bzl  rocketmq_deps.bzl
example/ons/: BUILD.bazel  ExampleAsyncProducer.cpp  ExampleONSOrderProducer.cpp  ExampleOrderPushConsumer.cpp  ExampleProducer.cpp  ExamplePushConsumer.cpp  ExampleTransactionProducer.cpp
examples/: CMakeLists.txt
examples/ons/: BUILD.bazel  ExampleOrderProducer.cpp  ExampleOrderPushConsumer.cpp  ExampleProducer.cpp  ExamplePushConsumer.cpp  Makefile  SendThenReceive.cpp  SendThenReceiveFIFO.cpp
src/main/cpp/: CMakeLists.txt
src/main/cpp/base/: DnsResolver.cpp  InetAddress.cpp
src/main/cpp/base/include/: DnsResolver.h  InetAddress.h  InvocationContext.h
src/main/cpp/base/tests/: BUILD.bazel  DnsResolverTest.cpp
src/main/cpp/client/: ClientConfigImpl.cpp  ClientManagerImpl.cpp  TlsHelper.cpp  TopicAssignmentInfo.cpp
src/main/cpp/client/include/: Broker.h
src/main/cpp/ons/: AccessPoint.cpp  BUILD.bazel  CMakeLists.txt  ConsumerImpl.cpp  FAQ.cpp  InstanceUtil.cpp  Message.cpp  MessageListenerWrapper.cpp  MessageQueueONS.cpp  ONSClientAbstract.cpp  ONSClientException.cpp  ONSConsumerAbstract.cpp  ONSEnvironmentVariableFactoryProperty.cpp  ONSFactory.cpp  ONSFactoryInstance.cpp  ONSFactoryProperty.cpp  ONSMessageQueueSelector.cpp  ONSSendCallback.cpp  ONSUtil.cpp  OrderConsumerImpl.cpp  OrderProducerImpl.cpp  ProducerImpl.cpp  SendCallbackONSWrapper.cpp  SendResultONS.cpp  TransactionProducerImpl.cpp  ons.lds  ons.ldscript
src/main/cpp/ons/include/: AccessPoint.h  ConsumerImpl.h  FAQ.h  InstanceUtil.h  MessageListenerWrapper.h  ONSClientAbstract.h  ONSConsumerAbstract.h  ONSFactoryInstance.h  ONSMessageQueueSelector.h  ONSSendCallback.h  ONSUtil.h  OffsetStoreAdaptor.h  OrderConsumerImpl.h  OrderListenerWrapper.h  OrderProducerImpl.h  ProducerImpl.h  SendCallbackONSWrapper.h  TransactionProducerImpl.h
src/main/cpp/rocketmq/: AsyncReceiveMessageCallback.cpp  BroadcastTask.cpp  ClientImpl.cpp  ConsumeMessageServiceImpl.cpp  ConsumeTask.cpp  DefaultMQProducer.cpp  DefaultMQPushConsumer.cpp  DynamicNameServerResolver.cpp  NamingScheme.cpp  ProcessQueueImpl.cpp  PullConsumerImpl.cpp  PushConsumerImpl.cpp  StaticNameServerResolver.cpp
src/main/cpp/rocketmq/include/: BroadcastTask.h  ConsumeMessageService.h  ConsumeMessageServiceImpl.h  ConsumeTask.h  NamingScheme.h  ProcessQueue.h  ProcessQueueImpl.h  PushConsumer.h  PushConsumerImpl.h
src/test/cpp/ons/: AccessPointTest.cpp  BUILD.bazel  MessageTest.cpp  ONSEnvironmentVariableFactoryPropertyTest.cpp  ONSFactoryPropertyTest.cpp  ONSUtilTest.cpp
tools/: cmake_install_grpc.sh  package.sh
