load("@rules_cc//cc:defs.bzl", "cc_library")
cc_library(
    name = "ons_interface",
    hdrs = glob(["ons/*.h"]),
    strip_include_prefix = "//api",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@org_apache_rocketmq//api:rocketmq_interface",
        "@com_google_absl//absl/strings",
    ],
)