#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "rocketmq_hdrs",
    srcs = glob(["rocketmq/*.h"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ons_hdrs",
    srcs = glob(["ons/*.h"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "rocketmq_interface",
    hdrs = [
        ":rocketmq_hdrs",
    ],
    strip_include_prefix = "//api",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "ons_interface",
    hdrs = [
        ":ons_hdrs",
    ],
    strip_include_prefix = "//api",
    visibility = [
        "//visibility:public"
    ],
)