function(add_example name file)
    add_executable(${name} ${file})
    target_link_libraries(${name} PRIVATE api ZLIB::ZLIB rocketmq)
endfunction()

add_example(ons_example_producer ons/ExampleProducer.cpp)
add_example(ons_example_push_consumer ons/ExamplePushConsumer.cpp)
add_example(ons_example_order_producer ons/ExampleOrderProducer.cpp)
add_example(ons_example_order_push_consumer ons/ExampleOrderPushConsumer.cpp)
add_example(send_then_receive ons/SendThenReceive.cpp)