load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "example_producer",
    srcs = [
        "ExampleProducer.cpp",
    ],
    deps = [
        "//src/main/cpp/ons:ons_library",
    ],
)

cc_binary(
    name = "example_oneway_producer",
    srcs = [
        "ExampleOnewayProducer.cpp",
    ],
    deps = [
        "//src/main/cpp/ons:ons_library",
    ],
)

cc_binary(
    name = "example_async_producer",
    srcs = [
        "ExampleAsyncProducer.cpp",
    ],
    deps = [
        "//src/main/cpp/ons:ons_library",
    ],
)

cc_binary(
    name = "example_push_consumer",
    srcs = [
        "ExamplePushConsumer.cpp",
    ],
    deps = [
        "//src/main/cpp/ons:ons_library",
    ],
)

cc_binary(
    name = "example_order_producer",
    srcs = [
        "ExampleOrderProducer.cpp",
    ],
    deps = [
        "//src/main/cpp/ons:ons_library",
    ]
)

cc_binary(
    name = "example_transaction_producer",
    srcs = [
        "ExampleTransactionProducer.cpp",
    ],
    deps = [
        "//src/main/cpp/ons:ons_library",
    ],
)

cc_binary(
    name = "example_timed_message",
    srcs = [
        "ExampleTimedMessage.cpp",
    ],
    deps = [
        "//src/main/cpp/ons:ons_library",
    ],
)

cc_binary(
    name = "example_order_push_consumer", 
    srcs = [
        "ExampleOrderPushConsumer.cpp",
    ],
    deps = [
        "//src/main/cpp/ons:ons_library",
    ],
)