load("@rules_cc//cc:defs.bzl", "cc_library")
cc_library(
    name = "ons_library",
    hdrs = glob(["include/*.h"]),
    srcs = glob(["*.cpp"]),
    deps = [
        "@org_apache_rocketmq//src/main/cpp/rocketmq:rocketmq_library",
        "//api:ons_interface",
    ],
    visibility = ["//visibility:public"],
    strip_include_prefix = "//src/main/cpp/ons/include",
)