#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_cc//examples:experimental_cc_shared_library.bzl", "cc_shared_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "ons_library",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["include/*.h"]),
    strip_include_prefix = "//src/main/cpp/ons/include",
    deps = [
        "//api:ons_interface",
        "//src/main/cpp/admin:admin_server_library",
        "//src/main/cpp/client:client_library",
        "//src/main/cpp/log:log_library",
        "//src/main/cpp/rocketmq:rocketmq_library",
        "//src/main/cpp/tracing:tracing_utility",
        "//src/main/cpp/tracing/exporters:otlp_exporter",
        "@com_google_absl//absl/types:optional",
    ],
)

# https://docs.google.com/document/d/1NJiOr2vBJyrj2q1FFvl7IuoateuJyRWpjn8-6HxLWLs/edit#heading=h.5mcn15i0e1ch
cc_shared_library(
    name = "ons",
    roots = [
        "//src/main/cpp/log:log_library",
        ":ons_library",
        "@com_github_grpc_grpc//:upb_generated",
        "@com_github_grpc_grpc//:upbdefs_generated",
        "@com_github_fmtlib_fmt//:fmtlib",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/synchronization",        
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_github_gabime_spdlog//:spdlog",
        "@com_github_grpc_grpc//:grpc",
        "@com_googlesource_code_re2//:re2",
        "@boringssl//:crypto",
        "@boringssl//:ssl",
        "//external:madler_zlib",
        "@com_github_yhirose_cpp_httplib//:cpp_httplib",
        "@asio//:asio",
    ],
    static_deps = [
        "@//:__subpackages__",
        "@com_github_grpc_grpc//:__subpackages__",
        "@com_github_yhirose_cpp_httplib//:__subpackages__",
        "@asio//:__subpackages__",
        "@com_github_gabime_spdlog//:__subpackages__",
        "@com_github_gulrak_filesystem//:__subpackages__",
        "@com_google_googletest//:__subpackages__",
        "@com_google_absl//:__subpackages__",
        "@io_opencensus_cpp//:__subpackages__",
        "@com_github_opentelemetry_proto//:__subpackages__",
        "@com_google_protobuf//:__subpackages__",
        "@com_github_cares_cares//:__subpackages__",
        "@upb//:__subpackages__",
        "@com_googlesource_code_re2//:__subpackages__",
        "@boringssl//:__subpackages__",
        "@zlib//:__subpackages__",
        "@com_github_fmtlib_fmt//:__subpackages__",
    ],
    user_link_flags = [
        "-Wl,--version-script=$(location ons.lds)",
    ],
    additional_linker_inputs = [
        "ons.lds",
    ]
)